@@ -1,41 +1,36 @@
 package com.appointments.appointmentservice.Service;
 
-import com.appointments.appointmentservice.Config.DoctorServiceClient;
+import com.appointments.appointmentservice.Config.AppointmentEnrichmentFlowConfig;
 import com.appointments.appointmentservice.DTOs.AppointmentResponseDTO;
 import com.appointments.appointmentservice.Entities.Appointment;
 import com.appointments.appointmentservice.Repositories.MakeAppointment;
-import com.appointments.appointmentservice.DTOs.DoctorDataDTO;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.stereotype.Service;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class AppointmentQueryService {
+
     private final MakeAppointment appointmentRepository;
-    private final DoctorServiceClient doctorServiceClient;
+    private final AppointmentEnrichmentFlowConfig.AppointmentEnrichmentGateway enricher;              // ⬅️ new gateway
 
-    public List<AppointmentResponseDTO> getAppointmentsForPatient(String userId, Long doctorIdFilter) {
-        List<Appointment> appointments;
-        if (doctorIdFilter != null) {
-            appointments = appointmentRepository.findByIdUserIDAndIdDoctorID(userId, doctorIdFilter);
-        } else {
-            appointments = appointmentRepository.findByIdUserID(userId);
-        }
+    /**
+     * Return all appointments for a user, optionally narrowed to one doctor,
+     * already enriched with that doctor’s details.
+     */
+    public List<AppointmentResponseDTO> getAppointmentsForUser(
+            String userId, Long doctorIdFilter) {
 
+        List<Appointment> appointments = (doctorIdFilter != null)
+                ? appointmentRepository.findByIdUserIDAndIdDoctorID(userId, doctorIdFilter)
+                : appointmentRepository.findByIdUserID(userId);
+
+        // Delegate enrichment of EACH appointment to the Integration flow
         return appointments.stream()
-                .map(appointment -> {
-                    DoctorDataDTO doctorDetails = doctorServiceClient.getDoctorById(appointment.getId().getDoctorID());
-                    return AppointmentResponseDTO.builder()
-                            .userId(appointment.getId().getUserID())
-                            .doctorDetails(doctorDetails)
-                            .date(appointment.getId().getAppointmentDate())
-                            .time(appointment.getId().getAppointmentTime())
-                            .state(appointment.getAppointmentState())
-                            .build();
-                })
-                .collect(Collectors.toList());
+                .map(enricher::enrich)
+                .toList();
     }
 }
